outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-26_10-32-20/evaluations/problem_eval4254419420438340948_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of destination proximity and current-node distance based on the remaining path length, using a novel scoring function that combines linear and exponential components to balance exploration and goal-directedness more effectively.}
                                                                                                                                                                                                                                                   ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of destination proximity and current-node distance based on the remaining path length, using a novel scoring function that combines linear and exponential components to balance exploration and goal-directedness more effectively.}
                                                                                                                                                                                                                                                   ^
SyntaxError: unmatched '}'
